{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 4,
  "lineage": "e27697cf-8b72-5f72-be39-50af970900ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "tags": {
              "Name": "acme-prod-nat"
            },
            "tags_all": {
              "Name": "acme-prod-nat"
            },
            "id": "eipalloc-01e4ac19a629f1b84"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "tags": {
              "Name": "acme-prod-igw"
            },
            "tags_all": {
              "Name": "acme-prod-igw"
            },
            "id": "igw-079eb152af17cba2d",
            "arn": "arn:aws:fixture:us-east-1:000000000000:aws_internet_gateway/main",
            "vpc_id": "vpc-0ec67d780682f42d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "client_keep_alive": 3600,
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "idle_timeout": 60,
            "load_balancer_type": "application",
            "name": "acme-prod-alb",
            "preserve_host_header": false,
            "tags": {
              "Name": "acme-prod-alb"
            },
            "tags_all": {
              "Name": "acme-prod-alb"
            },
            "xff_header_processing_mode": "append",
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/acme-prod-alb/7a8b416fe7fdac32",
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/acme-prod-alb/7a8b416fe7fdac32",
            "security_groups": [
              "sg-01d5b59135d60c2bc"
            ],
            "subnets": [
              "subnet-0981a8048da6b928d",
              "subnet-0b1dff032dab114d7"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "certificate_arn": "arn:aws:acm:us-east-1:000000000000:certificate/fixture",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/acme-prod-app/d86c92e87a84b887",
                "type": "forward"
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "timeouts": null,
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/https/5ebf96a5fd2bba4b/d026ca047f0f81ce",
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/https/5ebf96a5fd2bba4b/d026ca047f0f81ce",
            "tags_all": {},
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/acme-prod-alb/7a8b416fe7fdac32",
            "mutual_authentication": [],
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "tcp_idle_timeout_seconds": 0
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "unhealthy_threshold": 3
              }
            ],
            "lambda_multi_value_headers_enabled": false,
            "name": "acme-prod-app",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/acme-prod-app/d86c92e87a84b887",
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/acme-prod-app/d86c92e87a84b887",
            "vpc_id": "vpc-0ec67d780682f42d7",
            "connection_termination": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "public",
            "tags": {
              "Name": "acme-prod-nat"
            },
            "tags_all": {
              "Name": "acme-prod-nat"
            },
            "id": "nat-04bd8b82183ca8ecc",
            "allocation_id": "eipalloc-01e4ac19a629f1b84",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b1dff032dab114d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04bd8b82183ca8ecc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acme-prod-private"
            },
            "tags_all": {
              "Name": "acme-prod-private"
            },
            "timeouts": null,
            "id": "rtb-0ba7c56abd2014cb5",
            "vpc_id": "vpc-0ec67d780682f42d7",
            "owner_id": "",
            "propagating_vgws": []
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079eb152af17cba2d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acme-prod-public"
            },
            "tags_all": {
              "Name": "acme-prod-public"
            },
            "timeouts": null,
            "id": "rtb-0a0e1a2f39b272aa4",
            "vpc_id": "vpc-0ec67d780682f42d7",
            "owner_id": "",
            "propagating_vgws": []
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c1f96d6b553aa8e",
            "route_table_id": "rtb-0ba7c56abd2014cb5",
            "subnet_id": "subnet-0261872bc18fc486d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09af268d9ba9918e4",
            "route_table_id": "rtb-0ba7c56abd2014cb5",
            "subnet_id": "subnet-086d5f2f5ccda55ac"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f93ba23a9978fb3a",
            "route_table_id": "rtb-0a0e1a2f39b272aa4",
            "subnet_id": "subnet-0b1dff032dab114d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2610a956ace64c5",
            "route_table_id": "rtb-0a0e1a2f39b272aa4",
            "subnet_id": "subnet-0981a8048da6b928d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "description": "Public entry point for the service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from the internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "acme-prod-alb",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acme-prod-alb"
            },
            "tags_all": {
              "Name": "acme-prod-alb"
            },
            "timeouts": null,
            "id": "sg-01d5b59135d60c2bc",
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-01d5b59135d60c2bc",
            "vpc_id": "vpc-0ec67d780682f42d7",
            "name_prefix": "",
            "owner_id": ""
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "description": "Application instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Application traffic from the load balancer only",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d5b59135d60c2bc"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "acme-prod-app",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acme-prod-app"
            },
            "tags_all": {
              "Name": "acme-prod-app"
            },
            "timeouts": null,
            "id": "sg-0f4e14e106d7ef990",
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-0f4e14e106d7ef990",
            "vpc_id": "vpc-0ec67d780682f42d7",
            "name_prefix": "",
            "owner_id": ""
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "description": "Database, reachable from the application tier only",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from the application tier",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f4e14e106d7ef990"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "acme-prod-db",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acme-prod-db"
            },
            "tags_all": {
              "Name": "acme-prod-db"
            },
            "timeouts": null,
            "id": "sg-05dff8a3790b9c8bd",
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-05dff8a3790b9c8bd",
            "vpc_id": "vpc-0ec67d780682f42d7",
            "egress": [],
            "name_prefix": "",
            "owner_id": ""
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "ipv6_native": false,
            "map_public_ip_on_launch": false,
            "tags": {
              "Name": "acme-prod-private-a",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "acme-prod-private-a",
              "Tier": "private"
            },
            "id": "subnet-0261872bc18fc486d",
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-0261872bc18fc486d",
            "vpc_id": "vpc-0ec67d780682f42d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "ipv6_native": false,
            "map_public_ip_on_launch": false,
            "tags": {
              "Name": "acme-prod-private-b",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "acme-prod-private-b",
              "Tier": "private"
            },
            "id": "subnet-086d5f2f5ccda55ac",
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-086d5f2f5ccda55ac",
            "vpc_id": "vpc-0ec67d780682f42d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "ipv6_native": false,
            "map_public_ip_on_launch": false,
            "tags": {
              "Name": "acme-prod-public-a",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "acme-prod-public-a",
              "Tier": "public"
            },
            "id": "subnet-0b1dff032dab114d7",
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-0b1dff032dab114d7",
            "vpc_id": "vpc-0ec67d780682f42d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "ipv6_native": false,
            "map_public_ip_on_launch": false,
            "tags": {
              "Name": "acme-prod-public-b",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "acme-prod-public-b",
              "Tier": "public"
            },
            "id": "subnet-0981a8048da6b928d",
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-0981a8048da6b928d",
            "vpc_id": "vpc-0ec67d780682f42d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "instance_tenancy": "default",
            "tags": {
              "Name": "acme-prod-vpc"
            },
            "tags_all": {
              "Name": "acme-prod-vpc"
            },
            "id": "vpc-0ec67d780682f42d7",
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-0ec67d780682f42d7"
          }
        }
      ]
    }
  ]
}